# safenotes

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
docs/: INSTALLATION.md  PREREQUISITES.md  README.md  USAGE.md
safenotes/: colors.py  displayer.py  files_accessor.py  helpers.py  paths.py  safenotes.py
safenotes/cli/: __init__.py
src/: files_accessor.py  safenotes.py
