[tool.poetry]
name = "safenotes"
version = "0.1.0"
description = "A program which allows you to write encrypted notes to self"
authors = ["Guilherme-Vasconcelos"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
