[tool.poetry]
name = "safenotes"
version = "0.1.0"
description = "A program which allows you to write encrypted notes to self"
authors = ["Guilherme-Vasconcelos"]
license = "MIT"

[tool.poetry.scripts]
safenotes = 'safenotes.cli:main'

[tool.poetry.dependencies]
python = "~3.8"
flake8 = "~3.8.4"
colorama = "~0.4.4"
questionary = "~1.9.0"
mypy = "~0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
